--- a/app.nw/assets/sass/_placeholders.scss
+++ b/app.nw/assets/sass/_placeholders.scss
@@ -1,15 +1,16 @@
 .placeholder
 {
-    position : absolute;
-    z-index  : 21;
-    width    : 100%;
-    height   : 100%;
+    position   : absolute;
+    z-index    : 21;
+    width      : 100%;
+    height     : 100%;
+    overflow-x : hidden;
 
     & .text
     {
         position      : absolute;
         z-index       : 22;
-        width         : 300px;
+        width         : 299px;
         height        : 130px;
         top           : 50%;
         left          : 50%;
